--- a/index.html
+++ b/index.html
@@ -114,12 +114,76 @@
                             <h3 class="ourteam-text">Ігор Дем'яненко</h3>
                             <p class="ourteam-desc">Product Designer</p>
                         </div>
+                        <div class="ourteam-linkbox">
+                            <ul class="linkbox-roster">
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="ourteam-item">
                         <img src="./img/olya.jpg" alt="olga_FrontendDeveloper" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Ольга Рєпіна</h3>
                             <p class="ourteam-desc">Frontend Developer</p>
+                        </div>
+                        <div class="ourteam-linkbox">
+                            <ul class="linkbox-roster">
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="ourteam-item">
@@ -128,12 +192,76 @@
                             <h3 class="ourteam-text">Микола Тарасов</h3>
                             <p class="ourteam-desc">Marketing</p>
                         </div>
+                        <div class="ourteam-linkbox">
+                            <ul class="linkbox-roster">
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="ourteam-item">
-                        <img src="./img/mihailo.jpg" alt="michailo_UIDesigner" class="ourteam-img">
+                        <img src="./img/michailo.jpg" alt="michailo_UIDesigner" class="ourteam-img">
                         <div class="ourteam-box">
                             <h3 class="ourteam-text">Михайло Єрмаков</h3>
                             <p class="ourteam-desc">UI Designer</p>
+                        </div>
+                        <div class="ourteam-linkbox">
+                            <ul class="linkbox-roster">
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="roster-item">
+                                    <a href="#" class="roster-link">
+                                        <svg class="roster-image">
+                                            <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
