--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="./index.html" class="nav-studio active-page">Студія</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./portfolio.html" class="nav-portfolio">Портфоліо</a>
+                        <a href="./pages/portfolio.html" class="nav-portfolio">Портфоліо</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-contacts">Контакти</a>
@@ -36,7 +36,7 @@
                 <li class="header-item">
                     <a href="mailto:info@devstudio.com" class="header-link">
                         <svg class="header-icon">
-                            <use href="./img/symbol-defs.svg#icon-icon-envelope-hover"></use>
+                            <use href="./img/symbol-defs.svg#icon-email"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
@@ -103,10 +103,10 @@
                         <img src="./img/tablet.jpg" alt="tablet" class="whatwedo-img">
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./img/leptop.jpg" alt="leptop" class="whatwedo-img">
+                        <img src="./img/comp.jpg" alt="leptop" class="whatwedo-img">
                     </li>
                     <li class="whatwedo-item">
-                        <img src="./img/ipad.jpg" alt="ipad" class="whatwedo-img">
+                        <img src="./img/tel.jpg" alt="ipad" class="whatwedo-img">
                     </li>
                 </ul>
             </div>
