--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,22 +13,20 @@
         integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../assets/reset.css">
-    <link rel="stylesheet" href="../assets/portfolio.css">
     <link rel="stylesheet" href="../assets/style.css">
-    <link rel="stylesheet" href="../assets/normalize.css">
+    <link rel="stylesheet" href="../assets/portfolio.css">
 </head>
-
 <body>
     <header class="header">
-        <div class="container header-box        ">
-            <a href="../index.html" class="header-logo">Web<span class="header-span">Studio</span></a>
+        <div class="container header-box">
+            <a href="./index.html" class="header-logo">Web<span class="header-span">Studio</span></a>
             <nav class="header-nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="../index.html" class="nav-studio">Студія</a>
+                        <a href="./index.html" class="nav-studio">Студія</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../pages/portfolio.html" class="nav-portfolio">Портфоліо</a>
+                        <a href="./portfolio.html" class="nav-portfolio active-page">Портфоліо</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-contacts">Контакти</a>
@@ -38,88 +35,106 @@
             </nav>
             <ul class="header-list">
                 <li class="header-item">
-                    <a href="mailto:info@devstudio.com" class="header-gmail">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="header-link">
+                        <svg class="header-icon">
+                            <use href="./img/symbol-defs.svg#icon-email"></use>
+                        </svg>info@devstudio.com
+                    </a>
                 </li>
                 <li class="header-item">
-                    <a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="header-link">
+                        <svg class="header-icon">
+                            <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
     </header>
     <main>
-        <section class="hero1">
+        <section class="hero">
             <div class="container">
-            <div class="button-box">
-                <button type="button" class="hero1-button">
-                    Усі
-                </button>
-                <button type="button" class="hero1-button">
-                    Веб-сайти
-                </button>
-                <button type="button" class="hero1-button">
-                    Додатки
-                </button>
-                <button type="button" class="hero1-button">
-                    Дизайн
-                </button>
-                <button type="button" class="hero1-button">
-                    Маркетинг
-                </button>
+                <div class="button-box">
+                    <button type="button" class="hero-button">
+                        Усі
+                    </button>
+                    <button type="button" class="hero-button">
+                        Веб-сайти
+                    </button>
+                    <button type="button" class="hero-button">
+                        Додатки
+                    </button>
+                    <button type="button" class="hero-button">
+                        Дизайн
+                    </button>
+                    <button type="button" class="hero-button">
+                        Маркетинг
+                    </button>
                 </div>
+
                 <ul class="main-list">
                     <li class="main-item">
-                        <img src="../img/technocrack.jpg" alt="leptop_website" class="main-img">
-                       <div class="main-box"><h1 class="main-text">Технокряк</h1>
-                        <p class="main-desc">Веб-сайт</p>
-                    </div>
+                        <img src="./img/leptop_website.jpg" alt="leptop_website" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Технокряк</h1>
+                            <p class="main-desc">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/neworleanvsgoldenstar.jpg" alt="basketball" class="main-img">
-                       <div class="main-box"><h1 class="main-text">Постер New Orlean vs Golden Star</h1>
-                        <p class="main-desc">Дизайн</p>
-                    </div>
+                        <img src="./img/basketball.jpg" alt="basketball" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Постер New Orlean vs Golden Star</h1>
+                            <p class="main-desc">Дизайн</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/seafood.jpg" alt="logo_seafood" class="main-img">
-                       <div class="main-box"> <h1 class="main-text">Ресторан Seafood</h1>
-                        <p class="main-desc">Додаток</p>
-                    </div>
+                        <img src="./img/seafood.jpg" alt="logo_seafood" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Ресторан Seafood</h1>
+                            <p class="main-desc">Додаток</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                       <img src="../img/prime.jpg" alt="headphones" class="main-img">
-                       <div class="main-box"> <h1 class="main-text">Проєкт Prime</h1>
-                        <p class="main-desc">Маркетинг</p>
-                    </div>
+                        <img src="./img/headphones.jpg" alt="headphones" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Проєкт Prime</h1>
+                            <p class="main-desc">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/boxes.jpg" alt="2_boxes" class="main-img">
-                       <div class="main-box"> <h1 class="main-text">Проєкт Boxes</h1>
-                        <p class="main-desc">Додаток</p>
-                    </div>
+                        <img src="./img/2box.jpg" alt="2_boxes" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Проєкт Boxes</h1>
+                            <p class="main-desc">Додаток</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/inspirationhasnoborders.jpg" alt="monitor" class="main-img">
-                     <div class="main-box">  <h1 class="main-text">Inspiration has no Borders</h1>
-                        <p class="main-desc">Веб-сайт</p>
-                    </div>
+                        <img src="./img/monitor.jpg" alt="monitor" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Inspiration has no Borders</h1>
+                            <p class="main-desc">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                       <img src="../img/limitededition.jpg" alt="book_LimitedEdition" class="main-img">
-                      <div class="main-box"> <h1 class="main-text">Видання Limited Edition</h1>
-                        <p class="main-desc">Дизайн</p>
-                    </div>
+                        <img src="./img/book_LimitedEdition.jpg" alt="book_LimitedEdition" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Видання Limited Edition</h1>
+                            <p class="main-desc">Дизайн</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/lab.jpg" alt="tag" class="main-img">
-                      <div class="main-box"><h1 class="main-text">Проєкт LAB</h1>
-                        <p class="main-desc">Маркетинг</p>
-                    </div>
+                        <img src="./img/tag.jpg" alt="tag" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Проєкт LAB</h1>
+                            <p class="main-desc">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="main-item">
-                        <img src="../img/growingbusiness.jpg" alt="leptop_work" class="main-img">
-                       <div class="main-box"><h1 class="main-text">Growing Business</h1>
-                        <p class="main-desc">Додаток</p>
-                    </div>
+                        <img src="./img/leptop_work.jpg" alt="leptop_work" class="main-img">
+                        <div class="main-box">
+                            <h1 class="main-text">Growing Business</h1>
+                            <p class="main-desc">Додаток</p>
+                        </div>
                     </li>
 
                 </ul>
@@ -149,28 +164,28 @@
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="../img/symbol-defs.svg#icon-icon-instagram"></use>
+                                <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link active">
                             <svg class="checklist-image">
-                                <use href="../img/symbol-defs.svg#icon-icon-twitter"></use>
+                                <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="../img/symbol-defs.svg#icon-icon-facebook"></use>
+                                <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="../img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -179,5 +194,4 @@
         </div>
     </footer>
 </body>
-
 </html>
