--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -37,14 +37,14 @@
                 <li class="header-item">
                     <a href="mailto:info@devstudio.com" class="header-link">
                         <svg class="header-icon">
-                            <use href="./img/symbol-defs.svg#icon-email"></use>
+                            <use href="../img/symbol-defs.svg#icon-email"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
                 <li class="header-item">
                     <a href="tel:+380961111111" class="header-link">
                         <svg class="header-icon">
-                            <use href="./img/symbol-defs.svg#icon-smartphone"></use>
+                            <use href="../img/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11
                     </a>
                 </li>
@@ -74,63 +74,63 @@
 
                 <ul class="main-list">
                     <li class="main-item">
-                        <img src="./img/leptop_website.jpg" alt="leptop_website" class="main-img">
+                        <img src="../img/technocrack.jpg" alt="leptop_website" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Технокряк</h1>
                             <p class="main-desc">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/basketball.jpg" alt="basketball" class="main-img">
+                        <img src="../img/neworleanvsgoldenstar.jpg" alt="basketball" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Постер New Orlean vs Golden Star</h1>
                             <p class="main-desc">Дизайн</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/seafood.jpg" alt="logo_seafood" class="main-img">
+                        <img src="../img/seafood.jpg" alt="logo_seafood" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Ресторан Seafood</h1>
                             <p class="main-desc">Додаток</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/headphones.jpg" alt="headphones" class="main-img">
+                        <img src="../img/prime.jpg" alt="headphones" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Проєкт Prime</h1>
                             <p class="main-desc">Маркетинг</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/2box.jpg" alt="2_boxes" class="main-img">
+                        <img src="../img/boxes.jpg" alt="2_boxes" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Проєкт Boxes</h1>
                             <p class="main-desc">Додаток</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/monitor.jpg" alt="monitor" class="main-img">
+                        <img src="../img/inspirationhasnoborders.jpg" alt="monitor" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Inspiration has no Borders</h1>
                             <p class="main-desc">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/book_LimitedEdition.jpg" alt="book_LimitedEdition" class="main-img">
+                        <img src="../img/limitededition.jpg" alt="book_LimitedEdition" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Видання Limited Edition</h1>
                             <p class="main-desc">Дизайн</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/tag.jpg" alt="tag" class="main-img">
+                        <img src="../img/lab.jpg" alt="tag" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Проєкт LAB</h1>
                             <p class="main-desc">Маркетинг</p>
                         </div>
                     </li>
                     <li class="main-item">
-                        <img src="./img/leptop_work.jpg" alt="leptop_work" class="main-img">
+                        <img src="../img/growingbusiness.jpg" alt="leptop_work" class="main-img">
                         <div class="main-box">
                             <h1 class="main-text">Growing Business</h1>
                             <p class="main-desc">Додаток</p>
@@ -164,28 +164,28 @@
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="./img/symbol-defs.svg#icon-icon-instagram"></use>
+                                <use href="../img/symbol-defs.svg#icon-icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link active">
                             <svg class="checklist-image">
-                                <use href="./img/symbol-defs.svg#icon-icon-twitter"></use>
+                                <use href="../img/symbol-defs.svg#icon-icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="./img/symbol-defs.svg#icon-icon-facebook"></use>
+                                <use href="../img/symbol-defs.svg#icon-icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="checklist-item">
                         <a href="#" class="checklist-link">
                             <svg class="checklist-image">
-                                <use href="./img/symbol-defs.svg#icon-icon-linkedin"></use>
+                                <use href="../img/symbol-defs.svg#icon-icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
